--- a/css/news.css
+++ b/css/news.css
@@ -3,34 +3,41 @@
     background-size: cover;
     display: flex;
     flex-direction: column;
-    align-content: center;
-    min-width: 320px;
-    padding-top: 55px;
-    padding-bottom: 60px;
-    font-size: 20px;
+    gap: 10px;
+    padding-top: 10px;
+    padding-right: 40px;
+    padding-left: 30px;
+    margin-top: 0;
 }
 
 .wrapper-news {
     display: flex;
+    flex-direction: column;
     padding-right: 40px;
     padding-left: 40px;
-    justify-content: left;
+    justify-content: center;
 }
 
 .container__title-news {
     color: var(--color-title);
+    margin-bottom: 15px;
+    
 }
 
 .container__divider-news {
     background: var(--color-subtitle);
-    height: 3px;
+    height: 2px;
     border: 0;
-    width: 20%;
+    width: 15%;
+    margin-bottom: 15px;
+    
 }
 
 .container__text-article-news {
     color: var(--color-title);
     font-size: 17px;
+    padding-top: 30px;
+    display: inline;
 }
 
 .article__datetime-news {
@@ -41,18 +48,10 @@
 .wrapper-news-images {
     width: 70px;
     border-radius: 50%;
+    padding-top: 30px;
 }
 
 .container__article-news{
     list-style-type: none;
 }
 
-@media (min-width: 768px) {
-    .wrapper__news {
-        display: flex;
-        padding-right: 40px;
-        padding-left: 40px;
-        justify-content: center;
-    }
-
-}
